Added repository accesses to database, created web server on vue and bootstrap framworks, entities mapped to JSON and provided to REST api, which is used by framework. TRansactions, their list, user deails are fully implemented.

--- a/EetDBServer/pom.xml
+++ b/EetDBServer/pom.xml
@@ -76,6 +76,17 @@
     </dependency>
 
     <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
+    </dependency>
+
+    <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
         <version>${servletapi.version}</version>
